# demo-unreal

./: .gitignore  README.md  SHOWCASE.md
UnrealBasal/: UnrealBasal.sln  UnrealBasal.uproject  readme.txt
UnrealBasal/Config/: DefaultEditor.ini  DefaultEditorPerProjectUserSettings.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
UnrealBasal/Content/Blueprint/: BP_AutoDoor.uasset  BP_BlueprintCommunication.uasset  BP_ExampleInterface.uasset  BP_FinishedArea.uasset  BP_MiscBlueprint.uasset  BP_SceneComponentExample.uasset  BP_TestLua.uasset  BP_UTTwinStickGameMode.uasset  BP_UTTwinStickPawn.uasset  BP_UTTwinStickProjectile.uasset  BP_UTTwinStickProjectileSlow.uasset  MiscBlueprint.uasset
UnrealBasal/Content/Blutilities/: ExampleEditorUtilityBlueprint.uasset  ExampleEditorUtilityWidgetBlueprint.uasset  ExampleEditorUtilityWidgetBlueprintEditor.uasset  ExampleWidgetBlueprint.uasset
UnrealBasal/Content/FX/: DemoModuleNiagaraScript.uasset  DemoNiagaraScript.uasset  DemoNiagaraScriptNoDyna.uasset  DemoNiagaraSystem.uasset
UnrealBasal/Content/Miscellaneous/: TA_DemoTextAsset.uasset
UnrealBasal/Plugins/DemoBlack/: DemoBlack.uplugin
UnrealBasal/Plugins/DemoBlueprintLibrary/: DemoBlueprintLibrary.uplugin
UnrealBasal/Plugins/DemoContentOnly/: DemoContentOnly.uplugin
UnrealBasal/Plugins/DemoEditorMode/: DemoEditorMode.uplugin
UnrealBasal/Plugins/DemoEditorToolbarButton/: DemoEditorToolbarButton.uplugin
UnrealBasal/Plugins/DemoThirdPartyLibrary/: post_process.py
UnrealBasal/Source/: UnrealBasal.Target.cs  UnrealBasalEditor.Target.cs
houdini_delve/hdk_examples/: CMakeLists.txt
houdini_delve/hdk_examples/sop_star/: CMakeLists.txt  SOP_Star.C  SOP_Star.h
houdini_delve/hdk_examples/standalone/: CMakeLists.txt  dsmprint.C  gengeovolume.C  geo2voxel.C  geoisosurface.C  i3ddsmgen.C  i3dsphere.C  msgpipe.C  standalone.C  tiledevice.C  traverse.C
ue_houdini_general/osm_houdini_prj/: osm.hip
ue_houdini_general/terrain_example/: terrain_example.sln  terrain_example.uproject
ue_houdini_general/terrain_example_houdini_prj/: terrain_general.hip  terrain_instance.hip
unreal_basal/: unreal_basal.uproject
unreal_basal/Config/: DefaultEngine.ini
unreal_basal/Source/: unreal_basal.Target.cs  unreal_basalEditor.Target.cs
(+445 files in other folders)
